--- a/isof/M27_camping/app/src/main/res/values/colors.xml
+++ b/isof/M27_camping/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="buttonLabel">#FFFFFF</color>
+    <color name="orange">#FF9700</color>
+    <color name="grisClaro">#dadada</color>
 </resources>
