--- a/isof/M27_camping/app/src/main/res/layout/recyclerview_item.xml
+++ b/isof/M27_camping/app/src/main/res/layout/recyclerview_item.xml
@@ -10,4 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/grisClaro" />
+    <!-- Número de Ocupantes -->
+    <TextView
+        android:id="@+id/parcela_occupants"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Nº Ocupantes: X"
+        android:textSize="14sp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"/>
+
+    <!-- Precio por Persona -->
+    <TextView
+        android:id="@+id/parcela_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Precio/Persona: Y€"
+        android:textSize="14sp" />
 </LinearLayout>
