--- a/isof/M27_camping/app/src/main/res/values-night/themes.xml
+++ b/isof/M27_camping/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Notepad" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Base.Theme.ParcelApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/orange</item>
     </style>
 </resources>
