--- a/isof/M27_camping/app/src/main/res/values/themes.xml
+++ b/isof/M27_camping/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Notepad" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Base.Theme.ParcelApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/orange</item>
     </style>
 
-    <style name="Theme.Notepad" parent="Base.Theme.Notepad" />
+    <style name="Base.Theme.ParcelApp." parent="Base.Theme.ParcelApp" />
 </resources>
