--- a/isof/M27_camping/app/src/main/res/layout/activity_parcelaslistar.xml
+++ b/isof/M27_camping/app/src/main/res/layout/activity_parcelaslistar.xml
@@ -1,92 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.ParcelasListar">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".ui.ParcelasListar">
 
-    <!-- Barra de herramientas con el título -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+<!-- Barra de herramientas con el título -->
+<androidx.appcompat.widget.Toolbar
+    android:id="@+id/toolbar"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:background="@color/orange"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ParcelApp"
+        android:textSize="30sp"
+        android:textColor="@android:color/white"
+        android:layout_gravity="center" />
+</androidx.appcompat.widget.Toolbar>
+
+<!-- TabLayout para "Mis Parcelas" y "Mis Reservas" -->
+<com.google.android.material.tabs.TabLayout
+    android:id="@+id/tab_layout"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toBottomOf="@id/toolbar"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    android:background="@android:color/white"
+    app:tabTextColor="@android:color/black"
+    app:tabSelectedTextColor="@android:color/black">
+
+    <com.google.android.material.tabs.TabItem
+        android:text="Mis Parcelas" />
+
+    <com.google.android.material.tabs.TabItem
+        android:text="Mis Reservas" />
+</com.google.android.material.tabs.TabLayout>
+
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/orange"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="horizontal"
+        android:id="@+id/spinner_add"
+        app:layout_constraintTop_toBottomOf="@id/tab_layout"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        android:padding="4dp"
+        android:gravity="center_vertical">
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ParcelApp"
-            android:textSize="30sp"
-            android:textColor="@android:color/white"
-            android:layout_gravity="center" />
-    </androidx.appcompat.widget.Toolbar>
+            android:layout_weight="1">
 
-    <!-- TabLayout para "Mis Parcelas" y "Mis Reservas" -->
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:background="@android:color/white"
-        app:tabTextColor="@android:color/black"
-        app:tabSelectedTextColor="@android:color/black">
+            <!-- FloatingActionButton para añadir nuevos elementos -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/orden_parcelas"
+                android:textStyle="bold"
+                android:textSize="12dp">
+            </TextView>
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="12dp"/>
+        </LinearLayout>
 
-        <com.google.android.material.tabs.TabItem
-            android:text="Mis Parcelas" />
 
-        <com.google.android.material.tabs.TabItem
-            android:text="Mis Reservas" />
-    </com.google.android.material.tabs.TabLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_add_black_24dp"
+            android:contentDescription="@string/add_parcela"
+            android:backgroundTint="@color/orange"
+            app:backgroundTint="@color/orange"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <!--androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="@dimen/big_padding"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/recyclerview_item" />
+    </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:contentDescription="@string/add_note"
-        android:src="@drawable/ic_add_black_24dp"/-->
 
-    <!-- RecyclerView para mostrar los elementos de la lista -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout"
-        app:layout_constraintBottom_toTopOf="@id/fab"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:listitem="@layout/recyclerview_item" />
+<!-- RecyclerView para mostrar los elementos de la lista -->
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/recyclerview"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:padding="16dp"
+    app:layout_constraintTop_toBottomOf="@id/spinner_add"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    tools:listitem="@layout/recyclerview_item" />
 
-    <!-- FloatingActionButton para añadir nuevos elementos -->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_add_black_24dp"
-        android:contentDescription="@string/add_parcela"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
