--- a/isof/M27_camping/app/src/main/res/layout/recyclerview_reserva.xml
+++ b/isof/M27_camping/app/src/main/res/layout/recyclerview_reserva.xml
@@ -6,27 +6,63 @@
     android:background="@color/grisClaro"
     android:padding="8dp">
 
+    <!-- ID reserva -->
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/idReserva"
         style="@style/word_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <!-- Número de Ocupantes -->
 
-    <!-- Precio por Persona -->
+    <!-- Nombre del cliente -->
     <TextView
-        android:id="@+id/parcela_occupants"
+        android:id="@+id/nomCliente"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/parcela_price"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp" />
+        android:orientation="horizontal">
+        <!-- Teléfono del cliente -->
+        <TextView
+            android:id="@+id/tlfCliente"
+            android:layout_width="0dp"
+            android:layout_height="31dp"
+            android:layout_weight="1"
+            android:textSize="14sp" />
+
+        <!-- Precio total de la reserva -->
+        <TextView
+            android:id="@+id/precioTotal"
+            android:layout_width="0dp"
+            android:layout_height="31dp"
+            android:layout_weight="1"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <!-- Fecha de entrada -->
+        <TextView
+            android:id="@+id/fEntrada"
+            android:layout_width="0dp"
+            android:layout_height="31dp"
+            android:layout_weight="1"
+            android:textSize="14sp" />
+        <!-- Fecha de salida -->
+        <TextView
+            android:id="@+id/fSalida"
+            android:layout_width="0dp"
+            android:layout_height="31dp"
+            android:layout_weight="1"
+            android:textSize="14sp" />
+    </LinearLayout>
 
     <!-- Contenedor horizontal para iconos de editar y eliminar -->
     <LinearLayout
