--- a/isof/M27_camping/app/src/main/res/layout/activity_reservaslistar.xml
+++ b/isof/M27_camping/app/src/main/res/layout/activity_reservaslistar.xml
@@ -27,7 +27,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <!-- TabLayout para "Mis Parcelas" y "Mis Reservas" -->
-    <com.google.android.material.tabs.TabLayout
+    <!--com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -43,40 +43,19 @@
 
         <com.google.android.material.tabs.TabItem
             android:text="Mis Reservas" />
-    </com.google.android.material.tabs.TabLayout>
-
-    <!--androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="@dimen/big_padding"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/recyclerviewReservas_item" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:contentDescription="@string/add_note"
-        android:src="@drawable/ic_add_black_24dp"/-->
+    </com.google.android.material.tabs.TabLayout-->
 
     <!-- RecyclerView para mostrar los elementos de la lista -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+        android:id="@+id/recyclerview_reservas"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toTopOf="@id/fab"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:listitem="@layout/recyclerviewReserva_item" />
+        tools:listitem="@layout/recyclerview_reserva" />
 
     <!-- FloatingActionButton para añadir nuevos elementos -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
