--- a/isof/M27_camping/app/src/main/res/layout/recyclerview_reserva.xml
+++ b/isof/M27_camping/app/src/main/res/layout/recyclerview_reserva.xml
@@ -35,12 +35,12 @@
             android:textSize="14sp" />
 
         <!-- Precio total de la reserva -->
-        <TextView
+        <!--TextView
             android:id="@+id/precioTotal"
             android:layout_width="0dp"
             android:layout_height="31dp"
             android:layout_weight="1"
-            android:textSize="14sp" />
+            android:textSize="14sp" /-->
     </LinearLayout>
 
 
@@ -55,6 +55,13 @@
             android:layout_height="31dp"
             android:layout_weight="1"
             android:textSize="14sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <!-- Fecha de salida -->
         <TextView
             android:id="@+id/fSalida"
