--- a/isof/M27_camping/app/src/main/res/layout/activity_reservaedit.xml
+++ b/isof/M27_camping/app/src/main/res/layout/activity_reservaedit.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -24,16 +24,16 @@
 
     <EditText
         android:id="@+id/nomCliente"
-        android:layout_width="match_parent"
+        android:layout_width="387dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/small_padding"
+        android:background="@drawable/edittext_background"
         android:fontFamily="sans-serif-light"
         android:hint="@string/hint_nomCliente"
         android:inputType="textAutoComplete"
         android:minHeight="@dimen/min_height"
-        android:textSize="14sp"
         android:paddingLeft="@dimen/small_padding"
-        android:background="@drawable/edittext_background"/>
+        android:textSize="14sp" />
 
 
     <TextView android:layout_width="wrap_content"
@@ -43,60 +43,84 @@
         android:textSize="12sp"
         android:textStyle="bold"/>
 
+
+    <!-- Sección de Fechas de entrada y de salida en una fila horizontal -->
     <EditText
         android:id="@+id/tlfCliente"
-        android:layout_width="match_parent"
+        android:layout_width="387dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/small_padding"
+        android:background="@drawable/edittext_background"
         android:fontFamily="sans-serif-light"
         android:hint="@string/hint_tlfCliente"
         android:inputType="number"
-        android:scrollbars="vertical"
-        android:textSize="14sp"
+        android:minLines="4"
         android:padding="@dimen/big_padding"
-        android:background="@drawable/edittext_background"
-        android:minLines="4" />
-
-
-    <!-- Sección de Fechas de entrada y de salida con tamaño reducido -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/small_padding"
-        android:text="@string/fEntrada"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        />
-
-    <EditText
-        android:id="@+id/fEntrada"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/small_padding"
-        android:fontFamily="sans-serif-light"
-        android:inputType="textAutoComplete"
-        android:textSize="14sp"
-        android:padding="@dimen/small_padding"
-        android:background="@drawable/edittext_background"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/small_padding"
-        android:text="@string/fSalida"
-        android:textSize="12sp"
-        android:textStyle="bold"/>
-
-    <EditText
-        android:id="@+id/fSalida"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/small_padding"
-        android:background="@drawable/edittext_background"
-        android:fontFamily="sans-serif-light"
-        android:inputType="textAutoComplete"
-        android:padding="@dimen/small_padding"
+        android:scrollbars="vertical"
         android:textSize="14sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="@dimen/small_padding">
+
+        <!-- Columna de Fecha de Entrada -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/small_padding"
+                android:text="@string/fEntrada"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/fEntrada"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/small_padding"
+                android:background="@drawable/edittext_background"
+                android:fontFamily="sans-serif-light"
+                android:hint="@string/hint_fecha"
+                android:inputType="textAutoComplete"
+                android:padding="@dimen/small_padding"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <!-- Columna de Fecha de Salida -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/small_padding"
+                android:text="@string/fSalida"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/fSalida"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/small_padding"
+                android:background="@drawable/edittext_background"
+                android:fontFamily="sans-serif-light"
+                android:hint="@string/hint_fecha"
+                android:inputType="textAutoComplete"
+                android:padding="@dimen/small_padding"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
