--- a/isof/M27_camping/app/src/main/res/layout/recyclerview_reserva.xml
+++ b/isof/M27_camping/app/src/main/res/layout/recyclerview_reserva.xml
@@ -81,6 +81,15 @@
 
         <!-- Botón para editar (ícono de lápiz) -->
         <ImageView
+            android:id="@+id/send_icon_reserva"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:src="@drawable/ic_send" />
+
+
+        <!-- Botón para editar (ícono de lápiz) -->
+        <ImageView
             android:id="@+id/edit_icon_reserva"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
