casi van las parcelas reservadas

--- a/isof/M27_camping/app/src/main/res/layout/activity_parcelaedit.xml
+++ b/isof/M27_camping/app/src/main/res/layout/activity_parcelaedit.xml
@@ -112,7 +112,7 @@
         android:id="@+id/button_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/button_border_background"
         android:text="@string/button_save_parcela"
         android:layout_alignParentBottom="true"
         android:textColor="@color/buttonLabel"
