--- a/isof/M27_camping/app/src/main/res/layout/activity_parcelaslistar.xml
+++ b/isof/M27_camping/app/src/main/res/layout/activity_parcelaslistar.xml
@@ -4,14 +4,14 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".ui.ParcelasListar">
+tools:context=".ui.ParcelaReservadaListar">
 
 <!-- Barra de herramientas con el título -->
 <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbar"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:background="@color/orange"
+    android:background="@color/verdeEsperanza"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
@@ -21,36 +21,19 @@ tools:context=".ui.ParcelasListar">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ParcelApp"
+        android:fontFamily="@font/righteous_regular"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         android:layout_gravity="center" />
 </androidx.appcompat.widget.Toolbar>
 
-<!-- TabLayout para "Mis Parcelas" y "Mis Reservas" -->
-<com.google.android.material.tabs.TabLayout
-    android:id="@+id/tab_layout"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    app:layout_constraintTop_toBottomOf="@id/toolbar"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    android:background="@android:color/white"
-    app:tabTextColor="@android:color/black"
-    app:tabSelectedTextColor="@android:color/black">
-
-    <com.google.android.material.tabs.TabItem
-        android:text="Mis Parcelas" />
-
-    <com.google.android.material.tabs.TabItem
-        android:text="Mis Reservas" />
-</com.google.android.material.tabs.TabLayout>
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/spinner_add"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:padding="4dp"
@@ -64,30 +47,31 @@ tools:context=".ui.ParcelasListar">
 
             <!-- FloatingActionButton para añadir nuevos elementos -->
             <TextView
-                android:layout_width="110dp"
+                android:layout_width="100dp"
                 android:layout_height="37dp"
                 android:text="@string/orden_parcelas"
                 android:textStyle="bold"
                 android:textSize="16dp">
             </TextView>
+
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:textSize="12dp"/>
+                android:textSize="10dp" />
         </LinearLayout>
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
-            android:layout_width="wrap_content"
+            android:layout_width="254dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:src="@drawable/ic_add_black_24dp"
+            android:backgroundTint="@color/verdeEsperanza"
             android:contentDescription="@string/add_parcela"
-            android:backgroundTint="@color/orange"
-            app:backgroundTint="@color/orange"
+            android:src="@drawable/ic_add_black_24dp"
+            app:backgroundTint="@color/verdeEsperanza"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
