--- a/isof/M27_camping/app/src/main/res/drawable/border_background.xml
+++ b/isof/M27_camping/app/src/main/res/drawable/border_background.xml
@@ -1,6 +1,6 @@
 <!-- res/drawable/border_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/grisClaro"/> <!-- Fondo gris -->
+    <solid android:color="@color/verdeClaro"/> <!-- Fondo gris -->
     <stroke android:width="3dp" android:color="@android:color/white"/> <!-- Borde negro -->
     <corners android:radius="10dp"/> <!-- Bordes redondeados opcional -->
 </shape>
