--- a/isof/M27_camping/app/src/main/res/drawable/button_border_background.xml
+++ b/isof/M27_camping/app/src/main/res/drawable/button_border_background.xml
@@ -1,5 +1,5 @@
 <!-- res/drawable/button_rounded_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/orange" /> <!-- Color de fondo del botón -->
+    <solid android:color="@color/verdeEsperanza" /> <!-- Color de fondo del botón -->
     <corners android:radius="10dp" /> <!-- Radio de los bordes redondeados -->
 </shape>
