--- a/isof/M27_camping/app/src/main/res/drawable/edittext_background.xml
+++ b/isof/M27_camping/app/src/main/res/drawable/edittext_background.xml
@@ -5,7 +5,7 @@
     <item android:state_focused="true">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" /> <!-- Fondo blanco -->
-            <stroke android:width="2dp" android:color="@color/orange" /> <!-- Color del borde al seleccionar -->
+            <stroke android:width="2dp" android:color="@color/verdeEsperanza" /> <!-- Color del borde al seleccionar -->
             <corners android:radius="8dp" /> <!-- Bordes redondeados opcionales -->
         </shape>
     </item>
@@ -14,7 +14,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" /> <!-- Fondo blanco -->
-            <stroke android:width="1dp" android:color="@color/gray" /> <!-- Color del borde por defecto -->
+            <stroke android:width="1dp" android:color="@color/verdeClaro" /> <!-- Color del borde por defecto -->
             <corners android:radius="8dp" />
         </shape>
     </item>
