--- a/isof/M27_camping/app/src/main/res/layout/activity_inicio.xml
+++ b/isof/M27_camping/app/src/main/res/layout/activity_inicio.xml
@@ -7,34 +7,22 @@
     android:padding="16dp"
     android:gravity="center">
 
-    <!-- Barra de herramientas con el título -->
-    <!--androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/orange"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ParcelApp"
-            android:textSize="30sp"
-            android:textColor="@android:color/white"
-            android:layout_gravity="center" />
-    </androidx.appcompat.widget.Toolbar-->
 
     <Button
         android:id="@+id/button_parcelas_listar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ver Parcelas" />
+        android:layout_width="200dp"
+        android:layout_height="75dp"
+        android:text="Ver Parcelas"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
 
     <Button
         android:id="@+id/button_reservas_listar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="75dp"
         android:text="Ver Reservas"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
 
 </LinearLayout>
