--- a/isof/M27_camping/app/src/main/res/values-night/themes.xml
+++ b/isof/M27_camping/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,6 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.ParcelApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your dark theme here. -->
-        <item name="colorPrimary">@color/orange</item>
+        <item name="colorPrimary">@color/verdeEsperanza</item>
     </style>
 </resources>
