--- a/isof/M27_camping/app/src/main/res/values/colors.xml
+++ b/isof/M27_camping/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="orange">#FF9700</color>
     <color name="grisClaro">#dadada</color>
     <color name="gray">#818181</color> <!-- Color del borde por defecto -->
+    <color name="verdeEsperanza">#0C7100</color>
+    <color name="verdeClaro">#B4DCB0</color>
 </resources>
