--- a/isof/M27_camping/app/src/main/res/values/themes.xml
+++ b/isof/M27_camping/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.ParcelApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
-        <item name="colorPrimary">@color/orange</item>
+        <item name="colorPrimary">@color/verdeEsperanza</item>
     </style>
 
     <style name="Base.Theme.ParcelApp." parent="Base.Theme.ParcelApp" />
