--- a/isof/M27_camping/app/src/main/res/layout/activity_parcelaslistar.xml
+++ b/isof/M27_camping/app/src/main/res/layout/activity_parcelaslistar.xml
@@ -47,16 +47,15 @@ tools:context=".ui.ParcelaReservadaListar">
 
             <!-- FloatingActionButton para añadir nuevos elementos -->
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="115dp"
                 android:layout_height="37dp"
                 android:text="@string/orden_parcelas"
-                android:textStyle="bold"
-                android:textSize="16dp">
-            </TextView>
+                android:textSize="16dp"
+                android:textStyle="bold"></TextView>
 
             <Spinner
                 android:id="@+id/spinner"
-                android:layout_width="wrap_content"
+                android:layout_width="192dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:textSize="10dp" />
