--- a/isof/M27_camping/app/src/main/res/layout/recyclerview_reserva.xml
+++ b/isof/M27_camping/app/src/main/res/layout/recyclerview_reserva.xml
@@ -19,22 +19,27 @@
     <TextView
         android:id="@+id/nomCliente"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:layout_marginLeft="8dp"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <!-- Teléfono del cliente -->
         <TextView
             android:id="@+id/tlfCliente"
             android:layout_width="0dp"
             android:layout_height="31dp"
             android:layout_weight="1"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:layout_marginLeft="8dp"/>
+
 
         <!-- Precio total de la reserva -->
         <!--TextView
@@ -42,7 +47,8 @@
             android:layout_width="0dp"
             android:layout_height="31dp"
             android:layout_weight="1"
-            android:textSize="14sp" /-->
+            android:textSize="14sp"
+            android:layout_marginLeft="8dp"/-->
     </LinearLayout>
 
 
@@ -56,8 +62,8 @@
             android:layout_width="0dp"
             android:layout_height="31dp"
             android:layout_weight="1"
-            android:textSize="14sp" />
-
+            android:textSize="14sp"
+            android:layout_marginLeft="8dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -70,7 +76,9 @@
             android:layout_width="0dp"
             android:layout_height="31dp"
             android:layout_weight="1"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:layout_marginLeft="8dp"/>
+
     </LinearLayout>
 
     <!-- Contenedor horizontal para iconos de editar y eliminar -->
